--- a/Реализация/vs4/algos/algos.vcxproj.filters
+++ b/Реализация/vs4/algos/algos.vcxproj.filters
@@ -21,15 +21,15 @@
     <ClCompile Include="algos.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="aes1.cpp">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="aes1.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="aes2.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="aes3.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
