C++: add creating random buffers, calling functions on them, print times into console Python: collecting times, building lines by least squares, plotting

--- a/Реализация/vs4/algos/algos.vcxproj
+++ b/Реализация/vs4/algos/algos.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="aes1.h" />
     <ClInclude Include="aes2.h" />
     <ClInclude Include="aes3.h" />
+    <ClInclude Include="low_level.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
