--- a/Реализация/vs4/algos/algos.vcxproj.filters
+++ b/Реализация/vs4/algos/algos.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="aes3.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="low_level.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
